--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.7",
     "ngx-slick-carousel": "^17.0.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
